Refactor UI components and game state management to enhance user experience and support game over functionality